# gws-sheet-addon-ads-text-bycline

./: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: auth.py  gws_router.py
app/core/: config.py  security.py
app/core/gws_cards/: __init__.py  generate_ads_card.py  generic_card_schema.json  homepage_card.py
app/db/: crud.py  models.py
app/prompts/: ad_generation_template.txt
app/services/: ai_service.py
app/utils/: google_api_clients.py  sheets_utils.py
gsheet/: manifest.json
